RESOLVED FIXED138922
Cancel DataDetectors menu earlier if we know it can't be presented
https://bugs.webkit.org/show_bug.cgi?id=138922
Summary Cancel DataDetectors menu earlier if we know it can't be presented
Tim Horton
Reported 2014-11-20 02:15:03 PST
Cancel DataDetectors menu earlier if we know it can't be presented
Attachments
Patch (2.36 KB, patch)
2014-11-20 02:15 PST, Tim Horton
no flags
Patch (4.63 KB, patch)
2014-11-20 02:24 PST, Tim Horton
bdakin: review+
Tim Horton
Comment 1 2014-11-20 02:15:31 PST
Tim Horton
Comment 2 2014-11-20 02:17:04 PST
Tim Horton
Comment 3 2014-11-20 02:19:55 PST
Oh WebKit1.
Tim Horton
Comment 4 2014-11-20 02:24:00 PST
Tim Horton
Comment 5 2014-11-20 14:19:40 PST
Note You need to log in before you can comment on or make changes to this bug.